--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,17 @@
 ul{
-    list-style-type: none;
+    list-style-type:disc;
     color: black;
     text-decoration: none;
     padding: 0px;
+    padding:15px;
 
 }
 
 #clearall{
     border-radius: 20%;
     border:1px solid black;
+}
+
+body{
+    width: 650px;
 }
